Style updates: Darker navigation, fixed footer, aligned icons in dropdown

--- a/webroot/css/ark.css
+++ b/webroot/css/ark.css
@@ -2652,7 +2652,11 @@ body.cover {
 	padding-right: 20px;
 }
 .dropdown-menu {
-	min-width: 0;
+	min-width: 140px;
+}
+.dropdown-menu i.fa {
+	min-width: 1.2em;
+	display: inline-block;
 }
 ul.nav>li.nav-header {
 	margin-top: 2em;
@@ -2663,6 +2667,9 @@ ul.nav:first-child>li.nav-header:first-child {
 	margin-top: 0;
 	border-top: 0;
 }
+.sidebar .nav li {
+	margin-top: 0;
+}
 .sidebar .nav li > a .badge {
 	right: auto;
 	margin-left: 0.5em;
@@ -2671,16 +2678,33 @@ ul.nav:first-child>li.nav-header:first-child {
 	font-size: 80%;
 }
 .sidebar .nav li i.fa {
-	min-width: 16px;
+	min-width: 1.1em;
 	display: inline-block;
+}
+.sidebar .nav .active > a {
+	background-color: #fff;
+	box-shadow:  inset -7px 0 5px -5px hsla(0,0%,0%,.15);
+}
+.sidebar .nav >li>a:hover {
+	background-color: #eee;
+	box-shadow:  inset -7px 0 5px -5px hsla(0,0%,0%,.15);
 }
 .well {
 	border: 0;
 	background-color: #f7f7f9;
 }
 .sidebar {
-	background-color: #f5f5f9;
+	box-shadow:  inset -7px 0 5px -5px hsla(0,0%,0%,.25);
+	background-color: #e5e5e6;
 }
 .navbar-default.navbar-main {
 	background-color: #f5f5f9;
+}
+.navbar-fixed-bottom {
+	min-height: 15px;
+}
+.navbar-fixed-bottom p {
+	font-size: 10px;
+	margin: 0;
+	line-height: 1em;
 }
